src/objects/ServiceTerritory.object
<CustomObject>
    <fields>
        <fullName>FSL__Hide_Emergency_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the map will be shown on the emergency wizard</description>
        <label>Hide Emergency Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Internal_SLR_Geolocation__c</fullName>
        <label>Internal SLR HomeAddress Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__NumberOfServicesToDripFeed__c</fullName>
        <label>Number Of Services To Drip Feed</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__O2_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if enhanced scheduling and optimization engine is used</description>
        <label>Use enhanced scheduling and optimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Cluster_Min_Size__c</fullName>
        <label>Service Cluster Min Size (Closed Pilot)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Cluster_Proximity__c</fullName>
        <label>Service Cluster Proximity (Closed Pilot)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__System_Jobs__c</fullName>
        <label>System Jobs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BATCH_ServicesInJeopardy</fullName>
                </value>
                <value>
                    <fullName>BATCH_ServicesDispatched</fullName>
                </value>
                <value>
                    <fullName>ChatterNotification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__TerritoryLevel__c</fullName>
        <label>Territory Level</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_ServiceTerritories</fullName>
        <filterScope>Everything</filterScope>
        <label>All Service Territories</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceTerritories</fullName>
        <filterScope>Mine</filterScope>
        <label>My Service Territories</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>